<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/storeHeader"
        layout="@layout/app_bar_fragment" />

    <TextView
        android:id="@+id/txtEmptyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/emptyStores"
        android:textColor="@color/colorPrimary"
        />

    <com.mind5.microcity.agenda.objects.view.AnimatedExpandableListView
        android:id="@+id/storeView"
        android:layout_below="@+id/storeHeader"
        android:layout_above="@+id/storeButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:scrollbars="none"
        android:dividerHeight="0.5px"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:id="@+id/storeButtons"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            android:text="@string/clear"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            style="@style/Button"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btnOk"
            android:text="@string/ok"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</RelativeLayout>