<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.AboutFragment">

    <include layout="@layout/app_bar_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin2"
            android:paddingRight="@dimen/activity_horizontal_margin2"
            android:layout_height="?attr/actionBarSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/ic_alert_circle_grey600_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="24dp"
                android:text="@string/appAboutTitle"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/divider" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_content_mind_115dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtDevelopedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:text="@string/aboutDevelopedBy"
                />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_alignLeft="@+id/txtDevelopedBy"
                android:layout_below="@+id/txtDevelopedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="12sp"
                android:text="@string/version"
                />

            <TextView
                android:layout_alignLeft="@+id/txtDevelopedBy"
                android:layout_below="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="@string/aboutDevelopedIn"
                />
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="48dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtPrivacyPolicy"
                android:layout_width="wrap_content"
                android:textColorLink="@android:color/holo_blue_bright"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicy"
                />
            <TextView
                android:layout_width="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_height="wrap_content"
                android:text="/"
                />
            <TextView
                android:id="@+id/txtTermOfUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColorLink="@android:color/holo_blue_bright"
                android:text="@string/termsOfUse"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
