<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:text="@string/selectCard"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/scrList"
        android:layout_below="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_below="@+id/txtTitle"
            android:id="@+id/layList"
            android:orientation="vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/laybtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/scrList"
        android:gravity="right"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddCard"
            style="@style/Button"
            android:text="@string/addCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnPayment"
            android:text="@string/payment"
            android:layout_width="wrap_content"
            style="@style/Button"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>