<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/changePasswHeader"
        layout="@layout/app_bar_fragment" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/pbLoading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/semitransparent">
            <ProgressBar
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/grayFloatingLabel"
                android:layout_height="wrap_content"
                android:id="@+id/txtCurrentPassword"
                android:layout_marginRight="24dp"
                android:layout_marginTop="@dimen/space">

                <com.mind5.microcity.agenda.objects.view.BackAwareEditText
                    android:id="@+id/edtCurrentPassword"
                    android:layout_width="400dp"
                    android:paddingRight="24dp"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/graycursor"
                    android:layout_marginTop="5dp"
                    android:hint="@string/currentPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/grayFloatingLabel"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                android:layout_marginRight="24dp"
                android:layout_marginTop="@dimen/space">

                <com.mind5.microcity.agenda.objects.view.BackAwareEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/graycursor"
                    android:layout_marginTop="5dp"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                app:hintTextAppearance="@style/grayFloatingLabel"
                android:layout_width="match_parent"
                android:id="@+id/txtConfirmPassword"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginTop="@dimen/space">

                <com.mind5.microcity.agenda.objects.view.BackAwareEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/confirmPassword"
                    android:textCursorDrawable="@drawable/graycursor"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/layButtons"
                style="?android:attr/buttonBarStyle"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    style="@style/Button"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/btnOk"
                    android:text="@string/ok"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
