<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/forgotPasswHeader"
        layout="@layout/app_bar_fragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/main_progress"
            android:background="@color/semitransparent"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_alignBottom="@+id/layDialog"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
            <ProgressBar
                style="?android:attr/progressBarStyleLargeInverse"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:id="@+id/layDialog"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/grayFloatingLabel"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmail"
                android:layout_marginTop="@dimen/space">

                <com.mind5.microcity.agenda.objects.view.BackAwareEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/graycursor"
                    android:layout_marginTop="5dp"
                    android:hint="@string/recoveryPasswEmail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/grayFloatingLabel"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtCode"
                android:layout_marginTop="@dimen/space">

                <com.mind5.microcity.agenda.objects.view.BackAwareEditText
                    android:id="@+id/edtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/graycursor"
                    android:layout_marginTop="5dp"
                    android:hint="@string/recoveryPasswCode"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:hintTextAppearance="@style/grayFloatingLabel"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                android:layout_marginTop="@dimen/space">

                <com.mind5.microcity.agenda.objects.view.BackAwareEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/graycursor"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                app:hintTextAppearance="@style/grayFloatingLabel"
                android:layout_width="match_parent"
                android:id="@+id/txtConfirmPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space">

                <com.mind5.microcity.agenda.objects.view.BackAwareEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    android:textCursorDrawable="@drawable/graycursor"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="16dp"
                android:id="@+id/layButtons"
                style="?android:attr/buttonBarStyle"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    style="@style/grayButton"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/btnOk"
                    android:text="@string/ok"
                    style="@style/grayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>